# Stock_Tournament

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: daily_update.yml  render_readme.yml  weekly_picks.yml
data/leaderboard/year=2026/: week=24.parquet  week=25.parquet  week=26.parquet  week=27.parquet  week=28.parquet  week=29.parquet  week=30.parquet
data/outcomes/year=2026/: week=20.parquet  week=21.parquet  week=22.parquet  week=23.parquet  week=24.parquet  week=25.parquet  week=26.parquet  week=27.parquet  week=28.parquet  week=29.parquet
data/picks/year=2026/: week=20.parquet  week=21.parquet  week=22.parquet  week=23.parquet  week=24.parquet  week=25.parquet  week=26.parquet  week=27.parquet  week=28.parquet  week=29.parquet  week=30.parquet
data/training/year=2026/: week=20.parquet  week=21.parquet  week=22.parquet  week=23.parquet  week=24.parquet  week=25.parquet  week=26.parquet  week=27.parquet  week=28.parquet  week=29.parquet
model/: metadata.json
results/: performance.json
src/: pick.py  render.py  train.py  update.py
src/profiles/: base.py  boomer_bob.py  claude_profile.py  momentum_mike.py  random_randy.py  reddit_rita.py  rick_rf.py
src/utils/: features.py  headlines.py  market.py  universe.py
