[project]
name = "stock-tournament"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.102.0",
    "duckdb>=1.5.2",
    "joblib>=1.5.3",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "yfinance>=1.3.0",
]
